# hcp_interaction_log

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/src/routes/: ai.ts  dashboard.ts  hcps.ts  index.ts  interactions.ts
artifacts/hcp-crm/: index.html  package.json
artifacts/hcp-crm-walkthrough/: index.html  package.json
artifacts/hcp-crm-walkthrough/.replit-artifact/: artifact.toml
artifacts/hcp-crm-walkthrough/src/: index.css
artifacts/hcp-crm-walkthrough/src/components/video/: VideoTemplate.tsx
artifacts/hcp-crm-walkthrough/src/components/video/video_scenes/: Scene1.tsx  Scene2.tsx  Scene3.tsx  Scene4.tsx  Scene5.tsx  Scene6.tsx  Scene7.tsx
artifacts/hcp-crm/.replit-artifact/: artifact.toml
artifacts/hcp-crm/src/: App.tsx  index.css
artifacts/hcp-crm/src/components/layout/: AppLayout.tsx  Header.tsx
artifacts/hcp-crm/src/pages/agent/: AiAgent.tsx
artifacts/hcp-crm/src/pages/dashboard/: Dashboard.tsx
artifacts/hcp-crm/src/pages/hcps/: HcpDetail.tsx  HcpList.tsx
artifacts/hcp-crm/src/pages/interactions/: EditInteraction.tsx  InteractionDetail.tsx  InteractionList.tsx  LogInteraction.tsx
artifacts/hcp-crm/src/store/: store.ts
artifacts/hcp-crm/src/store/slices/: hcpSlice.ts  interactionSlice.ts
artifacts/python-ai-backend/: main.py  requirements.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: hcps.ts  index.ts  interactions.ts
