[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain-core>=1.2.31",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
